<?xml version="1.0" encoding="utf-8"?>
<!-- Note to self: Scrollview can only have one direct child -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/main_bg"
    tools:context=".SearchActivity" >
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:id="@+id/container" >
	    
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal" >
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/filters" />
            
        </LinearLayout>
            
            <RadioGroup
                android:id="@+id/radioFilter"
                android:orientation="horizontal"
                android:paddingBottom="20dp"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
    			android:layout_height="wrap_content" >
             	
                <RadioButton
		            android:id="@+id/alphabetical"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:paddingRight="10dp"
		            android:text="@string/alphabetical"
		            android:tag="@string/tag_alpha"
		            android:textColor="#ffffff"
                	android:textSize="24sp" 
		            android:checked="true" />
		 
		        <RadioButton
		            android:id="@+id/type"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:paddingRight="10dp"
		            android:tag="@string/tag_type"
		            android:textColor="#ffffff"
                	android:textSize="24sp"
		            android:text="@string/type" />
		        <RadioButton
		            android:id="@+id/price"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:paddingRight="10dp"
		            android:tag="@string/tag_price"
		            android:textColor="#ffffff"
                	android:textSize="24sp"
		            android:text="@string/price" />
		       <!-- <RadioButton
		            android:id="@+id/newest"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:paddingRight="10dp"
		            android:tag="@string/tag_newest"
		            android:textColor="#ffffff"
                	android:textSize="24sp"
		            android:text="@string/newest" />
		        <RadioButton
		            android:id="@+id/bestcheap"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:paddingRight="10dp"
		            android:tag="@string/tag_bestcheap"
		            android:textColor="#ffffff"
                	android:textSize="24sp"
		            android:text="@string/bestcheap" />-->
		 
		    </RadioGroup>
		    
            <Button
                android:id="@+id/newest"
                android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/newest"
				android:onClick="requestNewestWines" />
            
            <Button
                android:id="@+id/bestcheap"
                android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/bestcheap"
				android:onClick="requestBestCheapWines" />
            
            <LinearLayout
                android:id="@+id/messages"
                android:background="@drawable/round_edges_bg"
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	android:orientation="vertical"
            	android:gravity="center_horizontal"
            	android:layout_marginLeft="40sp"
            	android:layout_marginRight="40sp"
            	android:layout_marginBottom="20sp" >
            
        </LinearLayout>
		   	
            <LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:background="@drawable/round_edges_bg"
			    android:orientation="vertical"
			    android:id="@+id/results" >
		    </LinearLayout>
		   
	</LinearLayout>
	
</ScrollView>

 