<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/main_bg"
    android:id="@+id/container"
    tools:context=".SearchActivity" >
	
    <!-- Wine glass & bottle illustration -->
    <ImageView 
        android:id="@+id/main_illustration"
        android:contentDescription="@string/welcome_illustration_caption"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/wine_main_illustration"/>
	
    <!-- App title -->
	<sunshake.apps.unbonvinapp.TitleTextView
	    android:id="@+id/title"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/app_name"
	    android:textColor="#ffffff"
	    android:textSize="90sp" />
	
	<!-- How to use -->
    <TextView
        android:id="@+id/app_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="100dip"
        android:paddingLeft="20dip"
        android:text="@string/welcome_description_search"
        android:textColor="#ffffff"
        android:textSize="25sp" />
    
    <!-- Info -->
    <TextView
        android:id="@+id/app_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dip"
        android:layout_marginBottom="100dip"
        android:layout_alignParentBottom="true"
        android:text="@string/welcome_description_info"
        android:textColor="#d8d8d8"
        android:textSize="17sp" />

</RelativeLayout>
